fixed spacing in QuickView sections

--- a/core/src/CollapsibleCard/CollapsibleCard.less
+++ b/core/src/CollapsibleCard/CollapsibleCard.less
@@ -8,6 +8,7 @@
       .Caret {
         margin-right: 0.5rem;
         width: 10px;
+        font-size: 15px;
       }
 
       .ProvidedContent {
